--- a/report/Makefile
+++ b/report/Makefile
@@ -4,7 +4,10 @@ all: report.pdf
 report.pdf: report.bbl 	\
 			report.tex 	\
 			sections/title-page.tex \
-			sections/introduction.tex
+			sections/introduction.tex \
+			sections/basic.tex \
+			sections/algorithm.tex \
+			sections/implementation.tex
 	pdflatex report.tex
 
 report.bbl: report.bib 
